<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">config</string>
    <string name="configs">configs</string>
    <string name="work_mode">work mode</string>
    <string name="domain_redirect">domain redirect</string>
    <string name="proxy_config">proxy config</string>
    <string name="redirect_and_proxy">redirect + proxy</string>
    <string name="test">test</string>
</resources>
