<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/configs">
        <org.ttand.nhudp.preferences
                android:defaultValue="@string/domain_redirect"
                android:key="work_mode"
                android:entries="@array/modes"
                android:entryValues="@array/modes"
                android:title="@string/work_mode">
        </org.ttand.nhudp.preferences>

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/domain_redirect">
        <org.ttand.nhudp.preferences
                android:defaultValue="1"
                android:key="encMethod1"
                android:entries="@array/test"
                android:entryValues="@array/test"
                android:title="@string/test">
        </org.ttand.nhudp.preferences>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/proxy_config">
        <org.ttand.nhudp.preferences
                android:defaultValue="1"
                android:key="encMethod2"
                android:entries="@array/test"
                android:entryValues="@array/test"
                android:title="@string/test">
        </org.ttand.nhudp.preferences>
    </PreferenceCategory>

</PreferenceScreen>
